# ImproMusicale

./: .gitignore  .~lock.Soutenance - Diapo.odp#  .~lock.Soutenance - Script.odt#  Partitions  README.md  Soutenance - Diapo.odp  Soutenance - Script.odt  TODO.txt  The High Sausages - Black Hearted Woman (Studio Version) - YouTube.desktop  index.html  launch.sh
DTD/: Commandes DTD.txt  modelisation.dtd  note.dtd
InterfaceGraphique/: index.html  lecteur_melodie.html  listener.html  multi_viewer.html  scripter.html  test_profil_son.html  viewer.html
InterfaceGraphique/launch_log/: log.txt
ModeleMarkov/: azd.xml  launch.sh  log.txt  makefile
ModeleMarkov/lib/RMG/: CMakeCache.txt  CMakeLists.txt  Makefile  RMG.kdev4  cmake_install.cmake  rmg
ModeleMarkov/lib/RMG/.kdev4/: RMG.kdev4
ModeleMarkov/lib/RMG/include/: chromosome.h  constraints.h  mgenerator.h
ModeleMarkov/lib/RMG/src/: chromosome.cpp  constraints.cpp  main.cpp  mgenerator.cpp
Rapport et soutenance/: .~lock.Soutenance - Diapo.odp#  .~lock.Soutenance - Script.odt#  Présentation Dylan.odp  Soutenance - Diapo.odp  Soutenance - Script.odt
Recherches/: Commandes DTD.txt  Contrainte patterns.dia  Contrainte rectangles.dia  Etude patterns.txt  Markov exemple.dia  Recherches.txt  Résumé.dia  generation.dtd  melodie.dtd  modelisation.dtd
Sujet et recherches/: Recherches.txt  markov_therap_SHBG07.ppt
lecteur_melodies/: index.html  sample.xml  scripter.html  tests.html  visualisateur.html
modele_markov/: README.txt  TODO.txt  caca.xml  launch.sh  makefile  modele_markov.pro  tmp.xml
(+292 files in other folders)
